[package]
authors = ["Marius Weidner <weidner@cs.uni-freiburg.de>"]
edition = "2021"
license = "MIT"
name = "babysat"
readme = "readme.md"
version = "0.1.0"

# dependencies for parsing and logging 
[dependencies]
clap = {version = "4.2.7", features = ["derive"]}
log = "0.4.17"
peg = "0.8.1"
simplelog = {version = "0.12.1"}

# performance optimizations
[profile.release]
codegen-units = 1
lto = true
panic = "abort"
